<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zappos.weatherapp.WeatherActivity" >

    <item
        android:id="@+id/action_set_current"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/current_location"
        android:title="@string/set_home_location"/>
    <item
        android:id="@+id/action_current_location"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/current_location"/>
    <item
        android:id="@+id/action_home_location"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/home_location"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>


</menu>
