<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="#00000000"
    android:layout_height="fill_parent" >

    
        <TextView
        android:id="@+id/nowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white_disabled"
        android:text="@string/now"
    	android:textSize="20sp"/>    

    <TextView
        android:id="@+id/hourlyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/nowText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/white_milk"
        android:text="@string/hourly"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dailyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/hourlyText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/white_disabled"
        android:text="@string/daily"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/hourlyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:dividerHeight="2dp"
        android:layout_below="@id/dailyText">

    </ListView>

</RelativeLayout>