<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context="com.zappos.weatherapp.WeatherActivity" >

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="68sp" />

    <TextView
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/temp"
        android:layout_below="@+id/temp"
        android:text="@string/clear"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/maxtemp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/border"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="11dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/clear"
        android:contentDescription="@string/weather_image"
        android:padding="5dp"
        android:src="@android:color/white" />

    <TextView
        android:id="@+id/mintemp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/maxtemp"
        android:layout_below="@+id/maxtemp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/border"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/humidity"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/wind"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/temp"
        android:layout_toRightOf="@+id/temp"
        android:paddingLeft="5dp"
        android:text="C"
        android:textColor="@color/white_disabled"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/divider"
        android:layout_width="2dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="6dp"
        android:paddingBottom="5dp"
        android:layout_alignBottom="@+id/measure"
        android:layout_toRightOf="@+id/measure"
        android:src="@android:color/darker_gray" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/temp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="58dp"
        android:text="@string/new_york_us"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/nowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/now"
        android:textSize="20sp"
        android:textColor="@color/white_milk" />

    <TextView
        android:id="@+id/hourlyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/nowText"
        android:textSize="20sp"
        android:text="@string/hourly"
        android:textColor="@color/white_disabled" />

    <TextView
        android:id="@+id/dailyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/hourlyText"
        android:textSize="20sp"
        android:text="@string/daily"
        android:textColor="@color/white_disabled" />

    <TextView
        android:id="@+id/measureF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/divider"
        android:layout_toRightOf="@+id/divider"
        android:text="F"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/city"
        android:layout_toRightOf="@+id/dailyText"
        android:background="#00000000"
        android:src="@android:drawable/ic_popup_sync" />

</RelativeLayout>